pg hostname change

--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:lsUjNpno,iv:E8xkXIr/VIHVL5A3a7Q5lP0FEqrEmXgYSuMpivKS6l8=,tag:hXQhcdJK7UFTHWmZ2VaWlA==,type:str]
-ansible_user: ENC[AES256_GCM,data:ImvS7W/F,iv:OW1DLjeSNooNKI7aTbRGyqE6KlpVOnW69eURReNncVQ=,tag:ig6sDXGYHoo7LKDl3o93Ew==,type:str]
+kind: ENC[AES256_GCM,data:55t1Ejx8,iv:MqMEUrAX1Slt2mOtFwD6AyQbJsfKiX4s0Vqle7gFR8I=,tag:znSPBf0TiOFUvAiC6LKOVw==,type:str]
+ansible_user: ENC[AES256_GCM,data:o48FYqDF,iv:SLeVi9gk2n3wyJWe/yf59S64Ft8DLz7kjYKFc63MTf8=,tag:xy83X22HXU9Qq+4G0zY7Yg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJWUNmQW9WdExOSXhKVHJN
-            Q0Rpa0JxaTUvSWZySkFvZE9wTHUvcWRQY1gwClV1azhOZHJidFNQZGVUekRtWWEz
-            RElobjFPanhvMkdPY1JkRm1rby9lT2sKLS0tIExWNnlLN2d0amZUcC9hVENaRkI3
-            RE9JWHdXa2Fzd0FCK0MrUVJCYUF6ZnMKkKzzgGtw08ezjHxTG7PVaS13VuqXYWds
-            m76Clfx17cr5bgqU9N4jkII2/9Os52JuA7hdgeN9Bo9+zGdwgdwDQg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBicXppeXFWc0VsTm5RTnFq
+            WlFnRE11ZXNjRFN2Vnh5YzFQYXl3eUFTd2xZCis5ay92amEwRXExeXBlSmNPRkxQ
+            UkFFdzNLZjhSdDA0M3FGTUJHTzNXVTAKLS0tIFBmTjA1U2IrbzRwcUFtUU15NFpC
+            UkdjK0RHRkNaR0RKUFZncUszSUhaZncK1e7cfRqW4otF/e/qIDP5fvCtFNTzhTwc
+            eqPan2wsgmaC0ttMKZi1FrGeaSrYPDTKmZ486/qeC6NSZQUubnkeSA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T04:15:11Z"
-    mac: ENC[AES256_GCM,data:ECYurc6oYe8r5a++5yuPWvsK5GP9Fq4Bk+dB/sDXRcMIfRhUvW8KxHTeUPFFYubABEeYdEVGVp9CMB5zywwfjJVnM2dPv77UMyfrAWHsGNmtyA92LEOu0TvvPu3pRYpoV8nTSlyBxDEp/fxTDoS7R8BKIaMX5Ki50eYy6kze0x0=,iv:xgbk7Ogjz5a3VhykNhqUW8TFrWkwY37L52KMmjJieRU=,tag:10juTLbF6kJbt/fXs8RGKA==,type:str]
+    lastmodified: "2023-03-18T20:41:41Z"
+    mac: ENC[AES256_GCM,data:eiL6WNQ2SK6YVOCWUmAmtaHtVVaJgduAGwLJr7s/LHnmpGisDSHPlqIs4AOCU/PyRn2JnsqRCd1BftwBOgt0k88NZ0pe1p/7UqDb4F2Qj2zQW+W2Ga28ANg2h7d6SSpy1gIrbZHRercGHgKHXX8qUXL/XQYw1RBog5Llj4px96M=,iv:ajXiA/6ARVocXnpE9GJ0wsIwXgs0puwv329oBt5alWE=,tag:JN6NNXWoyyTxidtyQ9gvMA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
