--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:L/yRYrl0,iv:S16ZFCtS33CpLA7ewLbc9OsnU1FvoRLRgrFzNdMvp1A=,tag:IX5bWrJ+Jv8ZWB5E+cVXxw==,type:str]
-ansible_user: ENC[AES256_GCM,data:8qMf5SKL,iv:06v6Q70rd+OxKiOXEAZv/Brvxl4iTmAYKeNfuyjjq1w=,tag:dPw86XGa0YIs22mqVYsycw==,type:str]
+kind: ENC[AES256_GCM,data:ECtrRr9T,iv:Td2XGW7h+EAhxBImN6pQyedyujhgY7BKzjAWSMSYRc0=,tag:+QGFp1YkymHKDKh5lVFOWQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:v6Gqlqcy,iv:oOsakZLOWOTF582evBwjsxy9lBiGIZ77m/MjwKDLSeE=,tag:3OdcRDKc5jIjxI76k9p69Q==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpMVhzdWhlV05sL2p2cFZR
-            bDdKUEtZNXBObmlpeExIOUIvdFp3Z2xDb1dRCmxTUU1SbnI1RTFXajRLMHJuQkJB
-            ZGlGZGhTQmZsYXN3eEFWQkVHRmhNUlUKLS0tIDNrZDJoRlZGV0p6MEtZWEU1emVl
-            ZFh6K1pWQUxlWXllWDRFVk05OUdwSlkKWGXleo7CG6FFhBdlJ3TZx8nL5qkWxKi2
-            dJmnlkmL1B1oSBC0kX2rMt/M/HkwACZVbNQQkrOjmIhAqJSLQ5bAJA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYMkJHSmc5VHNtZGFvb09w
+            YThTQlJ2b0VDU1VlbDRXU0lUMk9iTHkvTmxRCjZSNE1hMXFadlkwUkdRZUlSVDNo
+            MlVUdnFKb1FaZlFNVTc5MkpBdWExUlEKLS0tIEcveERwclVvU1g0bGlVM0tTYWtS
+            UGdMVVY1dG14Nk53VVA2RXg4eFJjRk0KIYKZhruxOV3VAwhZKwtXJkjKtsWcsSMU
+            bONTlDLggG9bNRGYvJlbALdtjZ7suuAOrhNGNJnJKYzXxaIlQ8aReA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T04:15:11Z"
-    mac: ENC[AES256_GCM,data:7UN+tr7AQCgGYyDkpDyzVlE6MGlh4GmZrF6x7UoY23Bf/Mw3ExzMhIEUxvVDKHbCS+/RRoQNGdJah/Z8l7k+LhIb7aOkU1j8hKb6+0UHURhGj4sts4HyhjbqLFy11lKDKIqR6dXJdzQm1iCT5FquPGGr8io20mbd8VyaA4vbzes=,iv:Mo0h7N6vhn9+ZcwJPlS6dYPdS50fbkbs8nWAVssYpoI=,tag:qu8CulblBfUOkKtMdqrIJQ==,type:str]
+    lastmodified: "2023-03-18T20:41:41Z"
+    mac: ENC[AES256_GCM,data:lA2/5F5xET37kfybbSPIVwgfd2zqq5z8wxt8Ag9Vth3sLeceuzVjogm/9ZvfA+FXz8A5zneY6XUUdqXKfwD7Fm0pRrhJuEh2m527qfle5NQynMNS3EJqIUPnt4DoqnkpID09pagJStfOQYkG3jyLFbdW16diWC8heVKepNM/a0g=,iv:G6wXsU1vZlK4oLGVWSiN2Ej7THsMyKoR107yXYNjPB4=,tag:Uj4m8VpoxMtL0nB7v4MYCw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
