--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:lxg3eRrk,iv:Q/2YoSXPUd8WEOOqnU7Gk3BT8mulpU/BvGem5CPPN+s=,tag:pT54ZKfjubkELsfa/Cr7uA==,type:str]
-ansible_user: ENC[AES256_GCM,data:XBZFv/di,iv:2XBxJbmepgaxQKMGsum9UtcylDF1CZjsmCYkJg/Agz0=,tag:xtapksbTfbfpDSnVMGKMfw==,type:str]
+kind: ENC[AES256_GCM,data:IXs5l77a,iv:6aEoi5Bxl0NUx8uGgI8G5zUjXGalZrfzCzhjUj6HGqM=,tag:56s3jnrheYdcr23V0YWKvg==,type:str]
+ansible_user: ENC[AES256_GCM,data:LmqFNb2n,iv:4BRF21W7Wo/Uh4XaM4y4Xvco2jzO3og2fGiShOitU7c=,tag:TErURyY+dIlg6SoPk1FBUA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqZHF5Qk1IdjVtNVRGeEhU
-            Qy8ybkl4RDZ6UkREN2VSNVhIQm8rNkNFT3pBCjhGUEh1RFppOTJZOERBdVJ2REVB
-            S3N5TmpqZU5FTHBFNWVmSUpvQWhYWkEKLS0tIDFCNmh1Tmd3ZngwZUEyU1A3U1hR
-            Ym9HR09vUFBTVzZwSzcvY0VUbmZmOVEKlG08owm7RpnCG8sPZhWOy3eOFciEZlI0
-            hzNDP3mTuqPIc8YsynVCS9Raz3kiSxB2GbdDIfDcqeQDGJ5GcHdvUA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGbWxYdlNVeUphYzFSZlR6
+            TVlqV093d0J2WmRHZ0ZuMDVydHAybWVPOUdNCkxpRGd5a0owZ3V5YzYyZnhJZzF3
+            dVZ6Vkk1N3A0UzJ0MWFyZ1BqVVJlMDAKLS0tIHQ3NUZDaXJkWGtLM3dudElHY0pq
+            cWZ4dnI2V2MxMldFZjN2WWlBLzJFSHMKx89FhBQ0AgEmmqskAfp+H6b0PDj0nf4M
+            QrI5VxRERUQWUA6QgOEdj4/XX5w7T9re0oYJlxigUOYZixYz3oXOxg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T04:15:11Z"
-    mac: ENC[AES256_GCM,data:c51e1jj1d5aXPAe8Eoy9IvR64PRSuiHSEv8GwDSQxEL3PWvmO59Z9ldN+YJMfJMZZr/mxEGMyhF+pBwwMXrbRsTOydEZRpyg0Uw1TTlCFtT/oiyY+84kjNktMtDLLPl3dmoxJUzjwJbIYgn8TVfKF7GPloNNMgQN1fwBRpH89w4=,iv:BFHTvGv5m3SV917730JFiLnGaUW1Kvft1HmnfGB2aBY=,tag:Qc7ktMktE3oHN5am/wKghw==,type:str]
+    lastmodified: "2023-03-18T20:41:41Z"
+    mac: ENC[AES256_GCM,data:zyEWC+f55mrAd9wY5+tP78o1OmAHqYQfUO0Q8Ytb6CLouvM0PTk+5gRXJ+iVlsSUXXeuB+/N7g+wlvTlkbBjCgWgtDm3mIJl0UlgVVoewFWVIRE9P7b+NVSlcLY1Okqld5tAkHb9R7O+oU/NRKo1sYnCHW810vkdn+6RV9EwN2c=,iv:LQRASVHuH8GnGwQnB7jIFxE4k2vBkUlPJj6O7dk1RJ0=,tag:jkpGi+fvEPcW+18uJOVkQQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
