--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:L429V8R7,iv:V5jPpE7wOe4hpdExDEWqR1CBQinyrq87CdczpuL8UiE=,tag:5MCsMbJZX/36FPYm870rGA==,type:str]
-ansible_user: ENC[AES256_GCM,data:Uj5taJtj,iv:jQz04//xRavN/RRNQMhSSfmmurk2Pn5/CEQ4x+Aj2Mg=,tag:hjVnACq1UrWwCiQyvH2fuw==,type:str]
+kind: ENC[AES256_GCM,data:eTan65hi,iv:t0ddjyABc+FINhSdUnw/cnAGgR1f3clL3qNCWorDMc4=,tag:Hw+E3yrpK7gD/LN8KoZqlQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:PGGw0GZw,iv:fdqbtg/8bsccKgS7zESEZQ5i8z47ZMS+pm8QJhNfz+E=,tag:tYznlH2RSx7+f6L7EQbhMA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4MFYwYVdLb2R6ejU0RTNo
-            dm53S0ZSNzJxNmJ5dnZmM3BVSDM2cWRSaWxNCkd0U0crb2diS2ZBdHVQOUg1MkRi
-            ZnRBUFNCUXdqbHU4aWd1UVpZdFVhamsKLS0tIFlxVUNWcjNCUW5jbDRXdHA4Q0NB
-            dFVST1ZudU4wVGIzTzIwa2MvRzRBcUEKqMsEQDwh7ezj/QtNZHTYWfZGuyTuFAZR
-            IVTR19xEnKlpA3gkNGMGQcUMu0ACQYRZExLBPRAKLDoTgZ7086wqFA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5aVplVWtkMDhIK0tUWWVK
+            WTBqR011SzJzZFJTMW9ZVVRCc1cxZWpLa1VRCjdLRzJiZXFua0orTXRmOTFrWHFU
+            Q3NGcEVPRkFhdWtqbkdsNGZucE91ZFEKLS0tIHRYUnVITGN2Y0pMRkdNWWJJZlZF
+            Y3JZckxlMUJZY0dkVHZwTmVzVXNCYmcKkPAr5qtS+GdfMbAa0OUqmdY0QdxY0PeV
+            4IgeQKM6L6ThEDwtmgW1yRZuyWadwmOiyaw4iGrM/wG5eD/tyLlVzw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T04:15:11Z"
-    mac: ENC[AES256_GCM,data:kbwcx+Pan95MAFIEZYZFEZw3rkw43q738uY9pKkqTLddu7ewPuutA/D14D5OxGlwBSh3cUF2gasq4w+iT5yrhXrbI88IWk81JejCentESw/hwsRG4IU2ijQ+qw2vGL+JdOW+lQ18gJEzmZ0YPWDJkJYatMoiAv6b5bzkJ70e3RU=,iv:m+Rx2EGEfjJs29xJw01U2inq44281Hj9bHFfPeEGxf4=,tag:pO8YhQSui6AziXQNB27JUg==,type:str]
+    lastmodified: "2023-03-18T20:41:41Z"
+    mac: ENC[AES256_GCM,data:u9KejiuPR4uIejV8JaQgUITDwMB1f7YOepf2EOqG5PS0nXq6At5U7ca0JXAjIt/+JlBIoRVGN8QiRciV3hw9evBTvcFC2Zb1WYP6gcR5zJzH4JXlEfL+BW6TKgbmODaGm0wrUS51ZsxC1ZtigEobWB/wM7MpJu2h6csKoT5VkwU=,iv:7mZUlfXfuPqkiLi+/BlaEslWmcY1t2dbW8HJZCD009I=,tag:iLiVjY7Glp9m+bChcTsp+A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
