--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:/3FsTh/Z,iv:uSq80Q3tdvtUDKiiM/smQgdK+cFrZxBQj/tNBK3B4I0=,tag:MnXAN3L4Mn3bYbJXY1bzCQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:DrEQZFLC,iv:FzPM4sEasN4sgZIQeJT2FHHAI2qoTqyzj4Z8X23ZXxg=,tag:rqxn4wguVxuHkz1E2Kb1sg==,type:str]
+kind: ENC[AES256_GCM,data:7lh7TFyJ,iv:RoIIkxbLXmev9dhAe5awlJNGxS1bNJvFyGdM4TY3+G4=,tag:XTCdvc+LUS5cxisF31JYSA==,type:str]
+ansible_user: ENC[AES256_GCM,data:DhItLoGG,iv:4cN1PrFUzI/yvhRbfyGEPQt7/VN1LbHvgvq5PoYdQu0=,tag:y2yiMchIiNinYSrsSOKMng==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5TEQ0elBFVER6UXZuQkdD
-            bk5LVndBOXZmNitKMWF0WlNmeHJvUFBtOUY4CjREV0Q1aVFKTkNleUlhK1dlREUy
-            ZysxUnNlRnc0Yjhxa0Y4MWp5c0NUeEUKLS0tIFlkb2Rhc014UXZHTHZKZWVKWERQ
-            SmpRRXRzYkhPbVFBcTRqeGZlR2dSOWMKHMW+koUCHBl/xhxU6OoM1sePZe5kGQUO
-            1lTV9TTRoQ8ZYcC+oIRo+lxkfOBSOgHE2MzDLgipIL3Y+oXR0xXhGg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBicjF4YlpIL1AzNnZ3QXNC
+            VmEwUnFpT200ZVNZZ3hFU1lpa3NwcGk3dGdvCkNxTG9wRkVJTUZ6aHZzTzk3RXdT
+            bFBEWmtqNGF1ejJyUFpzRG1MRFdjRXMKLS0tIHg5ejkzSjJVYXd6RnNhUTUzWDBE
+            VU4yaWRMRVNtbmh2Z3ZSSTh1RE1sdEUKyk5DbP7nJ2znFxlHx4L836VuZLKlYAAH
+            YEUwpbxAu/5ZoN96i3XmWpmksr59kcd6vIGfnRjcooxvhqSFsCm7uA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T04:15:11Z"
-    mac: ENC[AES256_GCM,data:1tjLa0xOs5tNKWE8UsXAez6EMqLAtHaD5R+zF5dpyGAWE/w93uJaloQYZfDPYWmGL3fu0MbEEyrNY7FYb/YynQQD+1bSXaf51LnspL012fupPam0d1jpo4p/bxNrTz19bMxCXH9GJqjee0FyXdIBrxUSTA72qwLFUlcXfCE4LKk=,iv:MHttgo3axTwKauRPN1idDh4FhjiSWqCV8CmxHAWF0jM=,tag:bF+OYW5cuKJFveYMra7n7A==,type:str]
+    lastmodified: "2023-03-18T20:41:42Z"
+    mac: ENC[AES256_GCM,data:PqsQLoaY1KrjXcKPOwM8dYAZ1LTfg0j4vTDBaemducJnYKN4v2W5yJevhhxa5ek4bA1gPp/bfzhMVIOuTcJL2HjhYhcHHVVuuvnjdVlopgx+clwROlvfal7FBcUQTDUq6DQcrZBlKVpnKK87sbskbBDEGTmgvA0bNh+n6sA9kOQ=,iv:QE+GISwFWvyhLFuCbItsiFCGvEotgqto0rQoKG+aao8=,tag:cIUi8i/GPQ1Z27C/gZf7Ug==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
