--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:4dUdJM0L,iv:0DUB29Bil4Pr6ATB1KnDpbc9f88boedM95N6eXXEYh0=,tag:u/5OQD40OAOGgvq1oQxXEQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:6cYDalMH,iv:kEGzJkd9epu/Sdn6ditDzENlbD+YzTDrcTKF7JgoWF0=,tag:xa/BK2TRq3+zKnpnSPGoEg==,type:str]
+kind: ENC[AES256_GCM,data:yyitvYWs,iv:gyhCM3rb6qTq5Fl6EuR7wUbm5+3ozK50Hm19Bc0Bft0=,tag:nPh+Ph71uUjar5uDUPwbNw==,type:str]
+ansible_user: ENC[AES256_GCM,data:AWstSlv8,iv:VK4x9u/gRJ69K8URMmOzQ/JRn4cG37JueU6pIirm4RI=,tag:eNH8gvfoMo5ap0O05/c6Vw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzM2dEVWlCajNPU3dRTkw5
-            L0FCSjRJMnNMQ0syd2lxR0VtYmxxdGpRRndvCjRRS0ZKZGg5YndhSUVjNzdWZUNq
-            RG5mWWMwLy8reXU0NzhhM2VycXdNNUUKLS0tIGtZQlFyME1KekFrTzlXaUtWSGpL
-            K1RkdkxTQnovSElyS0QveHdhK2FpNmcKxbiAg8D7UnTmx0OF/p2KmhRChc6FvcDx
-            au8WkNIgoHwgqLG36E+RQl86MRXTBcWDBy4/HdDdmw2ZOy2hqqoW8A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4LzE5akFMS0I3U1J3TklW
+            SGRqbkxEVnpFNm15SjRNMHJGVnlkcDBsQmh3CjRWQmROdGN4SlVManBpbGdnUUU1
+            ZzZCbEJrUUk1cExZR1BVcHNZNk5rMXMKLS0tIGhqN2Nqc2RvY1FiV21MUzZubTVk
+            aHM2MDd3VXg4YlZuQ2lsdWJ2UFhsWWMKCOlp2+bLzvIWkELKxtNUm9I58W3yijqh
+            dNZT5Y9TAouDybWmstVOuGh6WwiMYb9gZzolybDF6sZBFrNFJqfYtQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T04:15:11Z"
-    mac: ENC[AES256_GCM,data:aF1398PSysuyRGnQE1Sh4QlmfSBJ6HCN7bjKQMwmAp17cS3TfRxgAO0zlSZuMWe2F7fI4hY1psUpiHp1ldxyWukokeZfMyMDIxwWfwKHQbmp43wIkxzoNyKHfrOZEms7HzNIfptMm7vI5q2KssP4yikZkJldtUeC4oEIusmDmhw=,iv:bQGuouZfayF/HCrHnajQrD1zdrvSxWPKnALduwkiU50=,tag:2IjWiLZWFvcPE55jDsfIOA==,type:str]
+    lastmodified: "2023-03-18T20:41:42Z"
+    mac: ENC[AES256_GCM,data:ODLeP/embmPZ+o5EJQzwei4c7D5wBrYBd7ZtW1J3mM2PNnZmVEUmBn41PrVXVicHG+6CeVNo7n7l/KgddB7sVAM4XSrNhsZTQ3BXI8XFYGmDIrthWn0zotRbP6dRstAWKWm4Lfzu3Q6HelO1ZDh3ds0LZQNJuPCpsYMUF7WEFo4=,iv:4DGun/TqpzgGYO2+USe8oXbGhJcPVg7EIu3u7pZJbz8=,tag:hSUpU63t+orQXqcEZtliiQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
