--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:wkLir7ra,iv:ty8UCNljf+8Vsw9lzO8pyJ0xtelJvja/qe6MWoiA5bM=,tag:HVO8mqbgmJsmxGeFsu3AjA==,type:str]
-ansible_user: ENC[AES256_GCM,data:AjI7ILzB,iv:I3M5OCVDfKq9xt3/w5BP6Y/1FXj6jO1EB2PJDfDRKc4=,tag:pkWclJF2FXQHjFFWHVBbmA==,type:str]
+kind: ENC[AES256_GCM,data:1Nl2E1K7,iv:/VNaiESyykdIEgsZMunXQIjHnuxpTbUvjvVXoeqgrJE=,tag:L5TpyD+evtt8rzIeJfpmcA==,type:str]
+ansible_user: ENC[AES256_GCM,data:keIgloBX,iv:sFh8mmaknaG95jWrytepnKwG2igsYpoyLadq62q2Rn4=,tag:u5FYsCnz7E7qPQ++L06VFA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwZFh1a0pjWTAxZkZkZzRi
-            YTNlWThNdzg2VG1qbUNYVis2TUxaQUtWRWpJCnBrVUFOYVV2RzZMNnU4Q2RiVDZ4
-            UHZhYXJmcUNzMTc1OEhKN2N2UUhIdGcKLS0tIFg2TEMxVVFxRW1pUXZtTERsd2hD
-            ai9zcjlZTzk2VDl0SnJTVnlQOXA4aU0KTdwVNS3YorML+BQUq7avov7UfpovPaU7
-            QNgSL9ia7LZmlyXsHjmADrrimvF3F1QKXa/v8JrhbiwlM3ro7/f/NQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxcC9DaHFOUFIzNGxhdXM5
+            UkQzZWtaaWwrYkQzVE5CRUh0SkVSRXY4cmo4CjBmZEg2RmFGUG5HS1ZPNktDS25Q
+            MUNpRVQzTjBmMlc5ZHFwNEM2N0JYc0EKLS0tIHZTTEpEbUxvRSsva3pUcVgwTXM3
+            R2NWOWRKSS9WakNJeURrWVB4czkxOXMK27T/fpob9tQSh4kiW2TFXWKkKz9v7A4N
+            IZbXpf6JFqZybgDYuOjRlUKc/vppKuw/fagntle+sbEPtThBbkrcgg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T04:15:11Z"
-    mac: ENC[AES256_GCM,data:XIdp7ZatLx1Wbb1Pg5zJhycV+bo1eTcM1Q+itOL5dT04uGbJV/E9VfLp7k/KmS6AnYYIIS8WyL2Fen1ltopFJSyqJzl2pli13E5aL4XYDXSakLBcuH7VKFp1bqI1loDCLwN++xe35WAFpJLO5CY+zxGxq+0iMBlO39b4sEAonNI=,iv:arINi5hdTzVB3oispsEz2Z1/0JrA860cPRQNQ6UldBI=,tag:QE+9eZCd9XXbf1eIwGbPrA==,type:str]
+    lastmodified: "2023-03-18T20:41:42Z"
+    mac: ENC[AES256_GCM,data:uMb2+5E/uTZ/JzCLbFvT/qjw0kCpd3dKXzjamwhS6f8rUs9Wb3cQAyvbSTPrz7tXQFMRww6vi75GM4ZsmRvZd592GkfTdX/AG/kPlOi9NS8BUF/2TJZ/57VAQx2pd94X1V7mfNvv0KfimWwGOOq8WWay6iWzPGwKHY+ZRTx5ce8=,iv:vM7eYdgKARIUOAs+NBjVNXMpvYYcyWoAopDQXl5H5sQ=,tag:MbaP0jzHh+62yKf3shabBg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
