--- a/ansible/inventory/kube/host_vars/k3s-08.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-08.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:G2ONPh5W,iv:ReM9Nnod/0JHe6wcb9F0YxGhmY3MN8bDpaU93KfKVFw=,tag:AKkvSXAl4+ymXUz6NRDzGw==,type:str]
-ansible_user: ENC[AES256_GCM,data:5rwpPm+b,iv:d6HSYXgcyoJP/IgR8+vqydcH2QT6kpGE8nIfrt3w0Fo=,tag:B532pHQh6kv9bX4fH1Kpog==,type:str]
+kind: ENC[AES256_GCM,data:BzAJtsvu,iv:OzEcJrnXnZlj/kUSWhyvbAPCvNiiAT73EJ2lVpADxIA=,tag:Zl1xG0irHiL7yfqCU9BQGg==,type:str]
+ansible_user: ENC[AES256_GCM,data:SpQddZHn,iv:4O1vp53qO1IoOOVfMV/hzEMvjmdapv44of3NYGtWsp0=,tag:rOf+/PriM2P0+zcryL6xdQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzVXpLMElQZTRYMlVCSUVo
-            NE5TUm5WV0p5dDFEaFc3ejRQQWZxeVErbTEwCmFEdFJJYWNqZ05VWXkvWGxVTXE1
-            cloyMnBSZ2FjZ0RmRmJzb1VGZm5KYWsKLS0tIDJTWm9hOFpndG5udGpPNkp4MTlV
-            cnY3aVZNdkRzS0VJRlBpNGJpWHgxb2sK9PLYtuKzMEOkqt50to4wh8WsrcBSbOL7
-            7S09b9YcW7g8jskzQ3XDcI5mCpDzzL+jt7Q6XJ+pwvqvX2BIQqlctQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y0pIbmpRRlhnbU90UUNJ
+            RjJOMjBxWWZSN0hBWHcwbm1zRXVMUERDTHdjCm02bjlaNjRrWmNzODBkK0ZMVnZz
+            ajFjc3Y4WkxmVnZ5OE1QTHNBY3lRdU0KLS0tIFZUV3crcWoxcFlBMnpnR3d1STZE
+            dHNSOENJNDRwN1o4SkRiMlYwbE1KQXMKXibXQeXJe60LiZCBoMiwAq+FO4yxKu3G
+            rbybo4p0LDF28WMkfBeqq+HPhKekw2phr2O/hrPJM7yI2U8tDiA3HA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T04:15:11Z"
-    mac: ENC[AES256_GCM,data:GvzSf5yWOfp9toYwGdUIVDPAJ91hC6cgo/A+seuayamOAvazlYsqP7iAyAnG5oRugckKQT9pK5EkpFlr31x7rhE7RcC07tVhdRVLC0atYChy67oJdfAC68Jcp7tCyRp3NM+z4NIB+CN+MtO1gs7r3EC8Y2X+o+KQCJtKCxCH0CI=,iv:f5AWOkMiDNVYZ9mcCKpqdRBn6FQAZZHxsEjIxvkNW0M=,tag:wamMhPY+xWHaQuv4nh5Azg==,type:str]
+    lastmodified: "2023-03-18T20:41:42Z"
+    mac: ENC[AES256_GCM,data:o+za8AVsqKfUYZzPdTmedq+skrLjCjRjWbxonhBtVOJvtDXBbIAINWS80RUj9bYpaLyQAdVGtn1xFWULjEhFzVonT6K3WyhoGZfmejxAqJytMYgQfY0Ebdy3mv7CpKQ7jqOBxTp799gKkPyGDu9T5cHQ/p+X8HAbNVnMnujhRf4=,iv:EZ0+t2LizxLtVW32PE6/vvrd1Q9gRDwcEMKxgUlDHMo=,tag:q8C2AjBzFFisz50bmRUwiA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
