--- a/ansible/inventory/kube/host_vars/k3s-09.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-09.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:WcrTnhax,iv:FJON/fCxQOmNJvQZT9i/UYg0res/oADtmmgAM2UPCu8=,tag:el7dCGlZ/u3r44Z1kkoBRw==,type:str]
-ansible_user: ENC[AES256_GCM,data:fiRq5x9U,iv:vOCHuO/hh/1nf6/13pLhJTrpYrXyD6xU3tsyL1cnHFU=,tag:oyWDRH0atNSmH2k0wE5EIQ==,type:str]
+kind: ENC[AES256_GCM,data:rbZLDZ2G,iv:0bsBYUA9NiMbZG4FmZZwUqa0kfnVXOBD8hus+iuW8+4=,tag:NQcpAHfVPOsr3j1feaBBFw==,type:str]
+ansible_user: ENC[AES256_GCM,data:IcjjMZWu,iv:w5ra8s6VrqsDxfAe9H4jasH2E8sXmwX4TDaGOpR023Q=,tag:YJeKEfwEVZBWOmyynCQJKA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0M25YT0VxSG9xWTJLN3RM
-            QlVBTU5IZE5pZS9ka2hEUUk0MkIvMlcveFFFCmJ4U3BIY2NsODZEaEV3UGk0OHBo
-            aGtVYWhmY01PbUJaT0xkTUVVRkhUWDgKLS0tIG1YNVlvK0VVRmswVFJNdjNnV2xn
-            Wjc1eDFXdnljQXFTRlVlaTZiNkg5VFUKpdd4F3Y7Sd/6yhSXQ3XMUCaz28BsIHVr
-            gDNhEsrdXDXf1Cx2MkZYaxZbPrB2DCMwTOiXDhOn1kLWfCvRCmAqXw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3N01URXhScXBIendod1NH
+            N2M2YXpBVkhBVHhPMmRBQmhXemF4Q0xMMWxVCi9qbFpOUjVYRWIwQmMxU0lRWm1y
+            REpicEsvV0J0SytBUkQ5ZFFuWVRIaEUKLS0tIEtZYll4dXZTbDhjNVpHYkM1dFUz
+            Q3NETWZxUlUzVjM3U01vWkswVUhRbXMKSuXe/NePSHCDikJ4BpNgutOW/9qO5sxS
+            GIji4h9OvEtDX8vUKhugp5WuJdYSpx2II9OtzX8eiFYsSpA9zqLhcA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T04:15:11Z"
-    mac: ENC[AES256_GCM,data:ayjLXawSj3SSUIYng8RYfJbs7ozDY/m22ycxQjsh/AQXnYiVJbJPBeaG0qmK7TeZJnBemoMOJZVnMVjja2dH+ODr1g3rjnT2tLbfynxbXg6h196Emw316SR0HbwLmwWE8wrkeO1LTK2RHefD6LXwK+TaIRbVvjwXvRllG3fhRQ4=,iv:yBxg24lzJX+pw8mdELrZZ+XmJGNdzeQdqjNutfn1RxU=,tag:MK6CXG8M1tAUbAoMkhcCiw==,type:str]
+    lastmodified: "2023-03-18T20:41:42Z"
+    mac: ENC[AES256_GCM,data:su1iMcH4nrXy/1mItsU00dHuVBknoWpitCuSoFBSHeViLKJcnSf6gNzwT5o0Cnybx3zNgo1E8/ubX9b+ChP452tPaE1ZfEnnVlcJZ3A3mAgpDBgJZrcFlfSnLL0Vpr/Hy8MXVvdLx64YDSZ1+ur38WvUUhpCU1WVUZLS1KfGruw=,iv:V+5bksiBaqw/K7hDw2QYEHS5Vm/VtWAq3N6hb9J23f8=,tag:FYUjDP5Z8yrWnNNOyrQ0Bw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
