--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:3bjAEk1ssGSkZdAezW/Fq2uMeiwQ,iv:GS5dhEnvMzhUqixUiqzrhcb2/W0hMeCewkSPV4zeLIc=,tag:w/hak8NBU1NVgocx1kakmA==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:0c07OwfIzc5rPtE41YTQhPM6gDX9oZa4Sqzl4Xxtdx7e7nLk+w==,iv:XOkZnC3qTAL06ANubFvnW26GDYiorxVqEBHa4wLkPZw=,tag:v7ywgqJ/49zv9wbJgd3gbQ==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:BLdfD3UOyyGPGXI=,iv:rdnxlboEi5AlHzYYjX3ps1g2RqBFpiEZyKZTK0bOGt8=,tag:xj6/iK7U20MBkMa7nyUZVA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:RNhlwOeEFpKZFgXfbXAecoWOTJ+V,iv:y8+wv7hRX/cbiUkSkEZ2Nu/+rYgkTz7cspxR9zggNh0=,tag:3ovZPsYTG4pfhTXGTMcGaw==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:89xhOWR/s2k7FZ/FZGlRVHlBUOTFbhRqbP/cbtcomfH8x4BPBg==,iv:+6YdrQTIfsZhvywj+XcUVeK5DFZG3BqrVt3c3MezdhE=,tag:HL4yksWrHg/TJmWVnHhYyw==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:6I7jRZ/YiqzwvSQ=,iv:xDm2xElIhz1qVWx8whI6Lx56HmucbDhYtfUjv60ENXc=,tag:Y6g7gZFpr3dyLKFjw5f4kg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqYld3OVVNejk0c0FhKzlB
-            amxsWjhuR1cwb2Q4R0dKd1F1YlZuMW05Y21VCmdtVUlVRElCVVhuaG5TZ1IwN2JU
-            dVN6M0g4eG1CSEZvYU1KdGVubXVVYWsKLS0tIFNmUGxDYlZnb3Qwbk96N3RyMmlj
-            Z0w1c1psbnF1aDFqcFZwNWM2TTJNWlkKxc6Bakqxdic19yTaRK7oGmlD0Xaspub1
-            LB9vmkLsawidQjJ2vaq67wT9P6mG2J4ZUjX3oGvYvCZvMlL0ycsc5w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6VDU3RzFOWW9UMHNqTTdP
+            Y1g2bFZPaFdPeUJaY2UxaHJzRGZwbi82OFhrCm5EcG5Xd2crZ2JmWFNXTHpCclA3
+            WjRQSWFZQzBJY2FMVHlmbE1TZUhwVG8KLS0tIFdzY2dpZ0s5d0lvVUttU0FkclBk
+            NmE4Qm9uK1VXQmc5Q1IyK0oxVURPUDgKgsdXOW4jeUN8TvMhysvScAIPVbS/62xZ
+            AzExdsPrwa4D2LlwIzEzxW3yBWaybzRooEZh4PBoFzS2VC34a93jGQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T04:15:11Z"
-    mac: ENC[AES256_GCM,data:KR9/ThxSUUfGenQEhzKiwKFAlS7RtCJjczMEqfBFDiXzNWQDvmpNSsMr9SA98l0NFtXCz2CWkbdIFZFs4U2ih9dA239wXEXxp5Jw8KS9uOM4OCYH1D/UwN9jSojuBJvtSGNig+g+XDLyyFlAwxIMtkz+2zV5qgVEuDdWls4ngFg=,iv:ZCtsB99Zf4YOhfeXfo/NIL6KEC83+KMhxb6/pF4tFq4=,tag:BtgMHH4/9JJbOHmrRqe8lw==,type:str]
+    lastmodified: "2023-03-18T20:41:41Z"
+    mac: ENC[AES256_GCM,data:TueOwQUZcpzLphAsmf7hHpMEgVLBIRv8BcLjv9SVfnsKtHapszQ8W4yvBKiMfUnugDB+KImvzeU0LmBjRkyIK47y4v5vHXe4XbXpBTtq4M4sAWHXjLYIOrMuBmvQvA96vy9UhSv+PPVU/UEZu9YWBDthZ1xFovXNjRURZ1armfI=,iv:k219lFIEMhwyY4NKFvpFmSahuO8cPh8XcHMWLP8BaOY=,tag:Y9kKGVHSMdD3mbtrry3uJA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
