--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,34 +4,34 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:/T7Poi/43WIplTY=,iv:qBN95Q63YgP4gYEo4NkVVQWchSw5tPf7rXFIPkpO2G0=,tag:GFHk3R1bj9/bwTmzjDWG6g==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:gbm+mdAvWcR5R08IFtnis+fDthVl,iv:155PR2coHaiTtbKpnvH6Gg+OOlB3ztV9og3bZ8UUaQ0=,tag:Nyt4ZLjaXui3GMDfWoz9LQ==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:gizWurrhHz4VtlT+2sH/3dbssHqUtx2uGxs0Zjz0zJLdigI6EKEUfEbX3oRIrBIG2M8YAZUI4Z82gKQTPekekMk6YpPHdPI=,iv:EzhOkH3atcVIIsyTqe48HZXEX+KK9Zm6EklcvUgWzRo=,tag:3ngTf4z40LYO/FETOAhD2Q==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:TabFIMUmcofPf2SGIjNzDn1vgsxohm9QGc/6Al+Hk4gcWNQ=,iv:uZmU7zGrMC0+WS2SXi1ECfPnN9Xj6RluBo6wDeaOuaU=,tag:0UWYFEZIqC2gtCxkLlaSFA==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:V90e3f8GNGqIxjwCruxEndWucA==,iv:9iOubX8oSOJmmHg//xvLC9uCDQAP8kbhHcRp+eriuhs=,tag:JqLD1iKAamTCBLSFdvIXaw==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:6sdZCdqAO76yye8j1+tbHnn5ksKM,iv:oJhRdm+EL3tpAp0oReHMLocmJhz4YYbnlYGVx8tF7S0=,tag:WMLolpZ9aqcFKxhgyABGDA==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:Tmnls6r702s=,iv:/JfjUrUHxn89/4JUMRXdAWQb0PhjRm3PZlq2yArhXK0=,tag:F6GUsuTnuIyEtEOHMgo3Cw==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:RXXa2hDTC6I=,iv:LmohXeQaxBFvu7fVBky9trXk0idpY/OB7BLyr5lP7iY=,tag:R1Lz9kQKD4duEPz8/O69zA==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:RJKYKwiLKyWlXDj+j7vWTxhJFYlmsNiiTGcBh5y55HEiv5Wj4IhIp4w665ujG/u/MV9j+sowOzOQG9bzppal6g==,iv:5Ic7EkwQSictMMUvdrPSFNtE2BZuotozm5vTyriwCNk=,tag:bLhW6CvKlSnsZHVtqbRopg==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:LgOttNVqtW3eGBfPvYhtxRE1crLOzM8gKxpQyMoCXUYIrK7YgiDn7NAyTY4XhFTBR3SIJvrHKAiNHles8Cv6Yg==,iv:UpS+WqdH6AAiVIKd/mEAX25TS6+bhT3TrZpdg2fS5Ms=,tag:d+8JjAE7oae+whSJlrhzWQ==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:uEZdJRcHRI4Z,iv:ZHZs06wHkVdfh+gAs0nmrIJ4cjouqD7bRQP6dHxpWUY=,tag:q0QS5O8RJy1uQ93a47FUUA==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:H78GxIfYv2XmCZRKpNVX,iv:bgFNXKUKxO/1fKo+Ez7qY68wA7HSh5DcaM1BWdlYDGs=,tag:mRdZcnxBhGkBadgNdrs/eg==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:jlppWFrq9ko8mvbhHeCyN+mKZO+A7T+ywF8L00E2a39AxlZ7O3Np8LbGeq8xyIad4tw=,iv:6Hk4fu5hpBwnfowwITrQvM8Svstw6HZAcc/YGIMO/H8=,tag:tsHnfakjeRTMcf8E9itUnA==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:ZE37I0QSPNyT5RrsuNQ=,iv:UuRg1Oup8OpVxpEJFc/6fZEVUud/NATpHJCV+42ZSoI=,tag:85R7I/RB89ocObt92VVI5w==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:maf8455QecyJMLc4F7LCGayOf28=,iv:F7YNoN4JgF6j1ihgkVFWmwvdHyJSLlRnNZN41/sVJAA=,tag:Ho+OPv+Ai1uNLeT6Ebtdug==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:zx1kumPHVwI=,iv:vmhA49ey505SPKk7n1M//xIsLgOdizSpLPesVrHtwRM=,tag:AfrrEsmOP7xG/uSISGypYw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:uzdUMl0ewuoXRsssbRzCcR8QtHz1mmmkEbJbKVYx35cX0ZVPuw==,iv:DoptuXLUuBK0zfNXSwNu6GXXhlC2+HkwSsCUQs/Io8A=,tag:zo6z8U46GBrYlMzLTJvaMQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:XzLvvQN+tE5P,iv:P52AIN/rCZM8phZXgOPZtMi314xBnsZYC1q8wf4ZfHE=,tag:yPXf9GvIJQwosbQztWMV5Q==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:8PtHegVDyAR/,iv:TgeNPXOE4ZRV9GwoYSpGyvcScL98YaRsEqMllNPdvCw=,tag:Ih2dQlJuqcQsuJVtNDdF+w==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:kGqWBl7XxQ==,iv:M8RHaEanaeuyHrGQ8hMr6NpnD30ZFiz+rR7Twb6z/SM=,tag:AKknUDriguHaeKxgkkPTqQ==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:MYmq6NNyK0Wr,iv:pALu8IPGAdEsOFbOz4mTjFYqEdZrYvhR3+xbPLXQ+bc=,tag:OfLl1Fce+LZrnmgdX0Ia1Q==,type:str]
-    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:EhGhaCUg8fpLG+nSUpOVj7wj,iv:8reO4+vFXHWM7UxEnwHyvdicLSm6h6eRA7YP7cpDqZs=,tag:r1DayFPuWF50xpbtnl6LgA==,type:str]
-    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:AV8PFj9vbsDi7VkBIVOfPvDZ7g==,iv:uiCUePRZEY4k9/nMU5hR2cpW8aM6WGUpekoYuKqhEBo=,tag:YM2XxCc6wp0yDs+czhWfAQ==,type:str]
-    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:allH2ID8BVg=,iv:msbZAheYYhu6KGUPw4cfg2Fv9iJs+0pFjvPXGiXMa+4=,tag:u/lBm6ltjTE4Ky3iXDglaA==,type:str]
-    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:uGwArisUdgQPxV1QWYH4LdS6GA==,iv:qjzyQhwobceG140EfMKHS+dzSkrC5lrqto4Dj4F4E9A=,tag:v5X0b8XAfcbZ3+x2KNAIHQ==,type:str]
-    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:MVhBJD7rJkJR,iv:FoioEFZdrzShqfavJrCOq0mGunizZp7efE6dHdmTAr8=,tag:1rUQVbzut2gbwSfYB4EhXQ==,type:str]
-    SECRET_MINIO_USERNAME: ENC[AES256_GCM,data:JvywrjwJltaj7Q==,iv:1yl1Vymzi/WiKxJLWEIwgM7eY49yzzNqYvOO6YQwplQ=,tag:NrrZ3/pywCEejL2hf5t1YA==,type:str]
-    SECRET_MINIO_PASSWORD: ENC[AES256_GCM,data:qGSa2/Pf7STv0w==,iv:qwTuSQQRXi9+XcP3kTRVbeYx2JawuBCjkJncD5NIa0M=,tag:iiGDto+OGfUKDpLe20yXMQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:Xgo875CuJDTbE90=,iv:gfbyLJrojIppx9T+9pFCMYpaevTp+haZu/qVmpzLEFI=,tag:5V861r1fb/sdbWjIZWI6OA==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:dPQUMY8ifEzqJtGXWVifGmvZMCU8,iv:MCXRblrk1ev21C1MHZUBJ5Q2cTjVX+vbizXDD8jK7xw=,tag:w93S4F0SqOVEO6AFigPkNg==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:dP8hiz/EQhQVZt/M6RGQ+Evb8u+18nzwXR9XbTywSrPQCy3Yi0tARgbdr3FY5+M0lYqL4brDK3aoFCHq9q+HfnfMn5mJdGM=,iv:7fbzoVibnXW/5TKc8xzq8WwKX9ixjwxX7gWIAKPRb3Q=,tag:pnblirBu0TR0CqsczPzimQ==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:sb3OdIqMCaHcyO1k5rY9jEfl/DUB9oo2pxBjxtwfoAIPEck=,iv:OizMAeVKHhv0r6at6i0yVyG0Pc4LAOHH4NqhvV9DqeU=,tag:VXzTr/J9HjVvp2qUJdMkqw==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:SJOAnbhjFnMGH9KA11kgtX4gNQ==,iv:92VJ6QfHro8AXO56KJUJytKL+nayqAkoWVhv31DlJ9A=,tag:RuuB+DuMBybaMPmmGcS34A==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:w9ZbK13mOSqXs5VSWGCaMFRvF6tu,iv:z8WQUnBe4dy0aVy0wy6vBpvqm2ruBE+0xRHqh5vez/8=,tag:QxKPzUvlIzFNGJFG365fkg==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:osdYJbRFaZE=,iv:virF3o8Mdv14PV6DjPwLSDqQLBLKeq6zCTsH+ua/iow=,tag:onrRHlbn2EmXyabPCRI53Q==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:Pi/6gKU6ZBo=,iv:x4aJXPxht7IHL08BAMxNQrMPuEWSN22tTm3PTpT7K+0=,tag:c/4q/Eeu65csPo23UAh6ug==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:G0SHdfM/aGz6IIImpI1/JX5+Ygp2EZQFGLXhNQqr7xrwdzX/Sw2U19zXqq4kFGRSHszPxw04vFJ3i9ic6fII/g==,iv:Ox0cthtn4eIsDpSKTs1kvqf/NyAUlJ0PcaeRpFe2q4I=,tag:UoY6PrInHlr1ShQyjCiC2Q==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:cFq6nKRH9gKl7MA9PR61XGuWGaQcwi5qClk+ZxuMZ8SsLOD5lAOK1jyAuBOhHA7+9ivqy5HcgxL3LmHyzosoUg==,iv:JRR0sN0JKb1J9GGv1HCrPPLCDDG/qMB5k8ymDa+VF7s=,tag:8vBgbLCGjrr45UWQtDiknA==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:g/8L+pqe6azK,iv:dmA0G3aaknPOkKvd2PqUPj/55dPD4wVtgJ8l5f9e/B4=,tag:ROlgIZYAJG+wT3qGbVgB6g==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:KQmlpPayQeogOzr4eoKl,iv:splCka7z5vk837ECBrXT5jakm4h48jX80UjCpzZqVKw=,tag:H0yfjhc+r0bdr3LodhOXmA==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:kQE6evL+huR9HQmkY7z4EopvG6pSCH6eX/ocL3+BQnIo3K+fZe/H8lrLs4HpPZnq+hk=,iv:QXQIxJrtzKz7aV/Ol7pBw37QLTITQhrekqxCUmWYH5w=,tag:YAqUVel3nKrZaD5875Dphw==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:WnCtaPetdiaoaxFPMnM=,iv:nJ8avPNeauULKT6dwUEqq+Y9YESxDFJ1sWieoqz+WWc=,tag:tcqWYpzgP0mgmu34Myc1Sg==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:php0feB/wwg6Q/yzaINOSDzI4J0=,iv:uGsQSiPy7Xb8NCcOY6NntaeGpEuv1q0/GdHGClDxuO0=,tag:rznt2QrOEkR3EKchwYHs8A==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:gY7Rf+nm7k8=,iv:+KdMC3fbe5X7qBQxqRTQKsNG5jGn/Eqwz/HsattBTog=,tag:idL7yWOUE1/wvLPAQeYgcA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:uQbcpQA0vLJn06x0eB6/8s5oGKcuUftgJTRJjCws3W4+/vIW,iv:pYDkknDxsDQR3AZ2Moq/Aa43iF1pmFn3xdCf+sbCAf0=,tag:PzHkFhPfvIzPbBqwwXnVqQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:0e8mEIjbGPTq,iv:Y7JtH7FoKKZDp6aL2ndYrgY4aVP5acThoVCJ8z8Y7LQ=,tag:PYWsUr4vfrF5XFvbhhqMUA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:lnVz3lGKYCw2,iv:Vl/SIb9eRR2cbvLBDNrEYxNQF8AVVG8DHlzKv7VjPd4=,tag:+fWRpmFeufjJBXUKE6bOTQ==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:ySSQfGl+YQ==,iv:S4ttfxrQ2KbmW2hjeMz9C8s/uBwVEGxvREyfkMPRLzY=,tag:oZziWbz9Zrq0ePIF6fFOaw==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:bRKZFIuRjdlZ,iv:ReodemkKmb/Isx+BQ8le47ZC0+Qo5xApHimLpwxkyYA=,tag:iqlmJ9NlbCH66UDC4WJvLg==,type:str]
+    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:6xnccSiKmoZdD6lJFU4FyLpq,iv:mjxaLGdnEjwqxEwGIsyHkKrguP7F0Rj/5IH2bVK89vU=,tag:+1cTDS//SvzCEZ0EqD81JQ==,type:str]
+    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:SnnBm61Gjj5S9B7wvivRlxqXvg==,iv:cApaWWRsfg/g7LCwk04qEriCx42GJAES6GJcwu2QY+4=,tag:wLuvO0MhXDCX1P4UUw+hEg==,type:str]
+    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:NWtLLnCuPbs=,iv:GMpR6iIscNTgDixmWst6ijGCu8ggCfZUPSotf98NZDE=,tag:7WkVd32hvTuXnPbhV7AtUA==,type:str]
+    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:DB16cgn2ycdTM1t6xOcz4Q0OjQ==,iv:3N3szGS1DEm+G5kXJfbTMulXNMsj7t+OsiFEPZ+hE8E=,tag:JUmtRh2rdz1dzKHavkp3yw==,type:str]
+    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:sTO6BnbfqSCE,iv:nD8Y00DWHc9VSVjZLhWBkwc20si18qRBWPShRT0d1PQ=,tag:N0F6aHE/dW1ae2/P5f3eUQ==,type:str]
+    SECRET_MINIO_USERNAME: ENC[AES256_GCM,data:FqAsERIQHMel9Q==,iv:8ZuqOlP09KqZEqJqhL6YwB7OsV0vvYib+56XAZUZA8g=,tag:0DioJDG49Tzx+cS+Tv2XZg==,type:str]
+    SECRET_MINIO_PASSWORD: ENC[AES256_GCM,data:z6qJXUHS9vRQcQ==,iv:id9S8daer6zE4rmv+ZxVy2iY+/r2aSsR5/krngXtsWU=,tag:5FkSpGU+iy/7BGDrlj3T3w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -41,14 +41,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArY1J3RTNvdDJWeGRmL1JS
-            Mndjc3JvKzFmcTBuUjlZRTEwUFRLeFpnclZNCmRzVWVpNUU3dmdubWNPRjlnVSt2
-            Q09oMTFTLzg5QW4xNEpJVGgvRTR4dEUKLS0tIFQwNUtESHN5S0kzb2Y3QmZQMkhB
-            RVZlcVRuc2hZbm5lQnh5RitqanhsMkUKfEJwjkUG6LCwgXqo9YKMlnt19gstiJzz
-            QwaS0XpFp9ywl197/+zzq4/2Mej71+wMrwD5EdSZELrI22f1yjmTnA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvaGxET2hnSUV2Wlh3cnQv
+            LzlLeWFJTEZIMjZlV1I4MG1oTXROSU42Y25JCjNDbnhUUGlIOTlqVEowVElqZndk
+            ZnRMVDhNTmhVb0Yya2Z3c2xkcVkxeGsKLS0tIHJSRFJpQjB2UEg1TktFWTVScE9i
+            K3N0ZTg0b3UrUlI3L0E2ZnNzT3B6SmMK942a2m0PNpotQQv83m5rcRVLWBTc6QKC
+            qo+WVZrfbgTLIIY79DmbAdHhjJxeyACwzYBLNtUOzv/xtyaf5p/7Pw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-16T04:15:11Z"
-    mac: ENC[AES256_GCM,data:vrvLHvNSjrMCvIpudVEvDtOyKirYWyIgtIhnWt+QeESMZZ2/zaT8lB9rO7RrjFYQuqR2zfnso5Ajh5p6Em/S5KasSzaydjQB5Od7EpwwZNyyph52af/XBpQPVN1kIwU7gtx1bcJBhhBaluVcnDtZoE4ykPMQEnPWE7dKOc2JGPM=,iv:BW7UdzLsqewYXiKixUuuVVsNLmxfKqBDxwgdWgHxnYA=,tag:nhrrIFNjHqBZwfQMHqFWmw==,type:str]
+    lastmodified: "2023-03-18T20:41:41Z"
+    mac: ENC[AES256_GCM,data:2TovHm99G1zBJKj2xjaXmThSRRchWDkyyEY0UwREvVy4otNal9UmRVQu7hKbhb7KX3DxB/uRf3e/uBTmbyJFUwdITUdQq5qX2ZBYnjtSlnTx+63JRTM97+c6eUFws3k3oQ9jNBWiwcVRLylKRa7YNSHf0B5UTUQazrp7Vg6VZ+k=,iv:8qzVhNK5+RcqU4Omqq1vdCKStFtrNk15AKL4MHJCJ1M=,tag:KGB9NtLbn5+Qcy73uWbTPw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
